// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSelect component should be defined and renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="more-menu__wrapper"
  >
    <button
      class="button button--full-width"
      data-testid="button-select-toggle"
      modifiers="full-width"
      type="button"
    >
      <i
        class="material-icons"
      >
        keyboard_arrow_down
      </i>
      Actions
    </button>
  </div>
</DocumentFragment>
`;

exports[`ButtonSelect component should toggle 1`] = `
<DocumentFragment>
  <div
    class="more-menu__wrapper"
  >
    <button
      class="button button--full-width"
      data-testid="button-select-toggle"
      modifiers="full-width"
      type="button"
    >
      <i
        class="material-icons"
      >
        keyboard_arrow_up
      </i>
      Actions
    </button>
    <div
      class="more-menu--open"
      style="top: 100%; width: 100%;"
    >
      <button
        class="button"
        type="button"
      >
        Settings
      </button>
      <button
        class="button"
        type="button"
      >
        Sign out
      </button>
    </div>
  </div>
</DocumentFragment>
`;
